apps/mealie/Mealie.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mealie
  labels:
    app: mealie
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: mealie
  template:
    metadata:
      labels:
        app: mealie
        name: mealie
    spec:
      containers:
      - name: mealie
        image: ghcr.io/mealie-recipes/mealie:v3.14.0
        imagePullPolicy: Always
        volumeMounts:
        - name: mealie-data
          mountPath: "/app/data/"
      volumes:
      - name: mealie-data
        persistentVolumeClaim:
          claimName: mealie-data
