apps/mealie/ServiceMealie.yml
---
apiVersion: v1
kind: Service
metadata:
  name: mealie
spec:
  selector:
    app: mealie
  type: ClusterIP
  ports:
    - port: 443
      targetPort: 443
      name: mealie
