apps/mealie/IngressRoute.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mealie
  labels:
    app.kubernetes.io/instance: mealie
spec:
  ingressClassName: traefik
  tls:
  - hosts:
      - mealie.camsab.me
  rules:
  - host: mealie.camsab.me
    http:
      paths:
      - backend:
          service:
            name: mealie
            port:
              number: 443
              name: mealie
        path: /
        pathType: Prefix
